--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -430,9 +430,14 @@ a:hover {
 	box-shadow : 2px 2px 2px #999;
 	border: 1px solid #999;
 	border-radius: 4px;
-
-	//position:relative;
+	position:relative;
 	//top: 30px;
+}
+
+.tagButton {
+	position:absolute;
+	//bottom: 0px;
+	right: 0px;
 }
 
 //.clip   { position: absolute; top: 0; left: 0; }
