--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -60,9 +60,9 @@ input.text, textarea, select#approver_search { margin-bottom:10px; padding: .4em
 input#file_number {width:32%;}
 input#area {width:180px;}
 input#block {width:70px;}
-input#street {width:180px;}
-input#building {width:70px;}
-input#paci_number {width:20%}
+input#plot {width:70px;}
+// input#building {width:70px;}
+// input#paci_number {width:20%}
 textarea#title {width: 500px;}
 
 .hiddenElement {display: none}
