--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -588,6 +588,22 @@ background: url('result.png');
 	width:2px;
 }
 /*
+#set{
+	border: 1px solid green;
+    position:relative;
+    //top: 30px;
+    //margin-bottom: 30px;
+}
+*/
+label{
+	border: 1px solid red;
+    position:relative;
+    //display: inline-block;
+    //top:-30px;
+    //width: 0px;
+}
+
+/*
 .customBody h1 {
 	font-size:175%;
 	font-weight:normal;
