--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -61,7 +61,10 @@ input.text, textarea, select#approver_search { margin-bottom:10px; padding: .4em
 	overflow-x: hidden;
 }
 
-
+#myjqGrid {
+	padding: 20px 10px 0 10px;
+	width: 682px;
+}
 
 //#newForm  { z-index: 80; }
 #newForm table { width: 540px }
