--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,14 @@ input.text, textarea, select#approver_search { margin-bottom:10px; padding: .4em
 	overflow-x: hidden;
 }
 
+#divGrid { 
+	margin-left:4px;
+	display:none;
+}
+
 #myjqGrid {
 	padding: 20px 10px 0 10px;
-	width: 682px;
+	//width: 682px;
 }
 
 //#newForm  { z-index: 80; }
