--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,10 @@ a:hover {
 	margin-top:6px;
 }
 
+#accordion>span {
+	text-align: right;
+}
+
 //#accordion>div>div {
 //	margin-top:16px;
 //}
@@ -425,7 +429,7 @@ a:hover {
 
 .docFileNumber{
 	margin-top: 1px;
-	width: 250px;
+	width: 200px;
 	//display: inline;
 }
 
@@ -468,7 +472,7 @@ a:hover {
 	word-wrap:break-word;
 	overflow: auto;
 	//overflow:-moz-scrollbars-vertical;
-	width: 650px;
+	width: 500px;
 	//height: 50px !important;
 	//border: 1px solid #000;
 }
