--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ a:active {
 }
 
 p {
-	margin-top: 0px;	
+	margin: 0px;
 }
 
 img {
@@ -49,7 +49,8 @@ th, td
 }
 
 
-fieldset { padding:0; border: 0px #ccc solid; margin-top:10px; }
+//fieldset { padding:0; border: 0px #ccc solid; margin-top:10px; }
+fieldset { padding:0; border: 0px #ccc solid; }
 //input.text, textarea, select#approver_search { margin-bottom:10px; padding: .4em; }
 input.text, textarea, select { margin-bottom:10px; padding: .4em; }
 //select#area_search { margin-bottom:10px; padding: .4em; }
@@ -122,7 +123,9 @@ textarea#title {width: 500px;}
 
 .hiddenElement {display: none}
 
-#validateTips { border: 1px solid transparent; padding: 0.3em; font-size: 1.2em}
+#validateTips, #validationCheckupTip { border: 1px solid transparent; padding: 0.3em; font-size: 1.2em}
+#validationCheckupTip { color: red}
+
 .ui-state-error { padding: .3em; }
 
 .ui-tooltip-for-item{ min-width: 700px; }
